# ChunkMapTool

./: .gitignore  CMakeLists.txt  COMMIT_EDITMSG  README.md  config  ids.json  imgui.ini  index  run_mcatool.bat
MCATool_Release/: README.md  imgui.ini  使用说明.txt
MCATool_Release/test_mca_files/: r.-2.-2.mca
include/Core/: ChunkDecoder.h  DataStructures.h  McaFileLoader.h  NbtParser.h
include/GUI/: McaViewerGUI.h
include/Utils/: Compression.h  Logger.h  TextureLoader.h
logs/: HEAD
logs/refs/heads/: main
logs/refs/remotes/origin/: main
refs/heads/: main
src/: main.cpp
src/Core/: ChunkDecoder.cpp  McaFileLoader.cpp  NbtParser.cpp
src/GUI/: McaViewerGUI.cpp
src/Utils/: Compression.cpp  TextureLoader.cpp
test_mca_files/: r.-2.0.mca
